Ticket: #ENT-634 SubTicket: # Component:Bug - Layout name truncates even the name is not long in TF&VF (except Chrome) Changes: 1.Bug fix.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/detail-view.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/detail-view.less
@@ -988,7 +988,8 @@
 	.select-type {
 		.base-ellipsis;
 		float: left;
-		width: auto;
+		min-width: 20px;
+		width: 100%;
 
 		&:after {
 			content: " ";
